--- a/manifests/deploy.yaml
+++ b/manifests/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: argocdprueba
-        image: danvermor21/tekton-ejemplo
+        image: danvermor21/tekton-ejemplo:1234567
         resources:
           limits:
             memory: "128Mi"
